--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
 DEV_MODE =development
-MONGO_URL = mongodb+srv://aditya:AdityaKumar12%40@cluster0.wujyuks.mongodb.net/bloodBank
+MONGO_URL = mongodb+srv://bloodDonation:bloodDonation@cluster0.yu8cmgy.mongodb.net/
 JWT_SECRET = AdityaKumar12
